src/objects/Quote_Discount_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>This is the custom setting for quote discounts.</description>
    <fields>
        <fullName>Federal_Distributor_Discount_Product__c</fullName>
        <label>Federal Distributor Discount Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Time_Discount_Product__c</fullName>
        <description>This is the name of the product for the one time discount.</description>
        <label>One Time Discount Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Margin_Discount_Product__c</fullName>
        <description>This is the product name for the partner margin discount.</description>
        <label>Partner Margin Discount Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Quote Discount Settings</label>
</CustomObject>